# smartrv

./: .gitmodules  CMakeLists.txt  DartConfiguration.tcl  lv_conf.h  lv_drv_conf.h  main.cpp  smartrv.code-workspace
src/: app.cpp  app.h
src/simulator/: simulation.c  simulation.h
src/theme/: color.h  smartrv_theme.c  smartrv_theme.h
src/ui/: tankGuage.cpp  tankGuage.h
src/widgets/: arc.cpp  arc.h  bar.cpp  bar.h  button.cpp  button.h  image.cpp  image.h  label.cpp  label.h  object.cpp  object.h  screen.cpp  screen.h  slider.cpp  slider.h  widget.cpp  widget.h
